--- a/src/features/AboutUsPage/AboutUsPageStyles.scss
+++ b/src/features/AboutUsPage/AboutUsPageStyles.scss
@@ -1,4 +1,5 @@
 .aboutUsPageContainer {
     min-height: 100vh;
     min-width: 100vw;
+    background: url('../../assets/images/streetcode-card/background.png') no-repeat center center / cover;
 }
