--- a/src/app/common/components/modals/Terms/AddTerm/AddTermModal.styles.scss
+++ b/src/app/common/components/modals/Terms/AddTerm/AddTermModal.styles.scss
@@ -37,3 +37,11 @@
       background-color: c.$modal-hover-color;
     }
 }
+
+.iconSize {
+    width: 80px;
+    height: 76px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
