--- a/src/app/layout/header/HeaderBlock.styles.scss
+++ b/src/app/layout/header/HeaderBlock.styles.scss
@@ -8,15 +8,17 @@ $navbar-innerwidth: 500px;
 $navbar-hidden-innerwidth: 400px;
 
 .navBarContainer {
-  @include mut.flexed($justify-content: space-between);
+  @include mut.flexed($justify-content: space-between, $align-items: center);
   @include mut.sized(100%, 82px);
-  @include mut.rem-padded(30px, 20px, 30px, 20px);
+  @include mut.rem-padded(21px, 32px, 21px, 32px);
 
   background-color: c.$pure-white-color;
   position: fixed;
   z-index: 7;
 
   svg {
+    @include mut.rem-margined($right: 34px);
+
     &:hover {
       cursor: pointer;
     }
@@ -52,14 +54,7 @@ $navbar-hidden-innerwidth: 400px;
   }
 }
 
-.leftPartContainer
-{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    gap: f.pxToRem(15px);
-}
-
+.leftPartContainer,
 .rightPartContainer {
   @include mut.flexed($justify-content: space-between, $align-items: center);
 }
@@ -125,7 +120,7 @@ $navbar-hidden-innerwidth: 400px;
 @media screen and (max-width: 1024px) { 
   .navBarContainer {
     @include mut.sized($width: 100%, $height: 64px);
-    @include mut.rem-padded(15px, 12px, 15px, 12px);
+    @include mut.rem-padded(15px, 0, 15px, 0);
 
     .ant-input-affix-wrapper,
     .loginBtn {
@@ -133,14 +128,9 @@ $navbar-hidden-innerwidth: 400px;
     }
     
     .leftPartContainer {
-        .logoContainer {
-            height: f.pxToRem(34px);
-            svg
-            {
-                width: 100%;
-                height: f.pxToRem(34px);
-            }}
-            
+      svg {
+        @include mut.rem-margined($left: 12px);
+      }
     }
 
     .rightPartContainer {
