Add founders block with adaptives

--- a/src/features/AboutUsPage/AboutUsPage.styles.scss
+++ b/src/features/AboutUsPage/AboutUsPage.styles.scss
@@ -1,7 +1,10 @@
 @use "@assets/sass/_utils.functions.scss" as f;
+@use "@sass/variables/_variables.colors.scss" as c;
+@use "@assets/sass/mixins/_utils.mixins.scss" as mut;
+@use "@assets/sass/variables/_variables.fonts.scss" as ft;
 
 .aboutUsPageContainer {
-    background: url('../../assets/images/streetcode-card/background.png') no-repeat center center / cover;
+    // background: url('../../assets/images/streetcode-card/background.png') no-repeat center center / cover;
     min-height: 78vh;
     width: 100vw;
 
@@ -11,6 +14,29 @@
         margin: f.pxToRem(40px) f.pxToRem(155px) f.pxToRem(146px);
         display: flex;
         flex-direction: column;
+
+        .aboutUsBlockContainer {
+            margin-bottom: f.pxToRem(110px);
+
+            h1 {
+                display: flex;
+                justify-content: center;
+                vertical-align: middle;
+                gap: f.pxToRem(20px);
+                margin-bottom: f.pxToRem(50px);
+
+                div {
+                    height: f.pxToRem(11px);
+                    width: f.pxToRem(11px);
+                    background-color: c.$accented-red-color;
+                    margin: auto 0;
+                }
+
+                text {
+                    @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 40px);
+                }
+            }
+        }
     }
 
     @media screen and (max-width: 1024px) {
