--- a/src/features/AdminPage/AdminModal.styles.scss
+++ b/src/features/AdminPage/AdminModal.styles.scss
@@ -83,11 +83,8 @@
     }
     
     .iconSize {
-        width: 80px;
-        height: 76px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include mut.sized(80px, 78px);
+        @include mut.flex-centered();
     }
 }
 
