--- a/src/features/AboutUsPage/Founders/Founders.styles.scss
+++ b/src/features/AboutUsPage/Founders/Founders.styles.scss
@@ -2,54 +2,40 @@
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/variables/_variables.fonts.scss" as ft;
+@use "@assets/sass/variables/_variables.sizes.scss" as s;
 
 .foundersBlock {
-    height: 100%;
-
+    // height: 100%;
     background: url('@assets/images/about-us/logo-bg.svg') no-repeat center;
     display: flex;
     flex-direction: column;
     gap: f.pxToRem(50px);
     
-    @media screen and (max-width: 1024px) {
+    @media screen and (max-width: s.$tablet) {
+        background: none;
         gap: f.pxToRem(30px) !important;
+        align-items: center;
     }
 
     .foundersContentBlock {
-
         display: flex;
         gap: f.pxToRem(60px);
         height: fit-content;
 
-        @media screen and (max-width: 1024px) {
+        @media screen and (max-width: s.$tablet) {
             gap: f.pxToRem(20px) !important;
-           // max-height: f.pxToRem(540px) !important;
         }
-
+        
         .foundersTextBlock {
             flex: 1;
             display: flex;
             align-items: center;
             justify-content: center;
-            //height: fit-content;
             margin: auto 0;
             background-color: c.$pure-white-color;
             box-shadow: 0px 7px 17px 2px rgba(91, 91, 91, 0.25);
-           
-            .foundersTextContainer {
-                margin: f.pxToRem(40px);
-                
-                @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 400, $font-size: 30px);
-                @media screen and (max-width: 1400px) {
-                    font-size: 20px ;
-                }
-                @media screen and (max-width: 700px) {
-                    font-size: 16px !important;
-                    color: red;
-                }
-            }
 
-            @media screen and (max-width: 1024px) {
+            @media screen and (max-width: s.$tablet) {
                 margin: 0 !important;  
             }
         }
