--- a/src/features/AdminPage/AdminModal.styles.scss
+++ b/src/features/AdminPage/AdminModal.styles.scss
@@ -7,7 +7,13 @@
 
     &.ant-modal {
         .ant-modal-close {
-            @include mut.sized(40px, 40px);
+            @include mut.positioned-as(absolute, $left: 90%, $top: -25px);
+                @include mut.circular(80px, c.$pure-white-color);
+                border: 2px solid c.$modal-hover-color;
+            
+                &:hover {
+                    background-color: c.$modal-hover-color;
+                }
         }
 
         .ant-modal-content {
@@ -76,5 +82,10 @@
             }
         }
     }
+}
+
+.iconSize {
+    @include mut.sized(80px, 78px);
+    padding: 31%;
 }
 
