--- a/src/app/common/components/modals/Terms/DeleteTerm/DeleteTermModal.styles.scss
+++ b/src/app/common/components/modals/Terms/DeleteTerm/DeleteTermModal.styles.scss
@@ -28,5 +28,11 @@
 }
 
 .deleteModal .ant-modal-close {
-    @include mut.sized(40px, 40px);
+    @include mut.positioned-as(absolute, $left: 90%, $top: -25px);
+        @include mut.circular(80px, c.$pure-white-color);
+        border: 2px solid c.$modal-hover-color;
+    
+        &:hover {
+            background-color: c.$modal-hover-color;
+        }
 }
