--- a/src/features/AboutUsPage/TeamMemberCard/TeamMemberCard.styles.scss
+++ b/src/features/AboutUsPage/TeamMemberCard/TeamMemberCard.styles.scss
@@ -8,13 +8,13 @@
 {
     display: flex;
     flex-direction: column;
-    gap:30px;
+    gap: f.pxToRem(30px);
 
     border-radius: 50px;
     box-shadow: 0px 7px 17px 2px #5b5b5b40;
     max-width: f.pxToRem(310px);
 
-    padding: 20px;
+    padding: f.pxToRem(20px);
 
     .photoContainer{
         img{
@@ -26,9 +26,9 @@
     .textContainer {
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: f.pxToRem(10px);
 
-        padding: 0 8px;
+        padding: 0 f.pxToRem(8px);
         text-align: center;
         h2 {
             @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 23px);
@@ -40,7 +40,7 @@
         .linksContainer {
             display: flex;
             justify-content: center;
-            gap: 10px;
+            gap: f.pxToRem(10px);
         }
     }
   
