--- a/src/features/AboutUsPage/Vacancies/Vacancy/Vacancy.syles.scss
+++ b/src/features/AboutUsPage/Vacancies/Vacancy/Vacancy.syles.scss
@@ -20,6 +20,7 @@
     }
     p {
         @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
+        word-break: break-all; 
     }
     
     label { 
