--- a/src/features/AdditionalPages/ContactUsPage/ContactUs.styles.scss
+++ b/src/features/AdditionalPages/ContactUsPage/ContactUs.styles.scss
@@ -21,6 +21,41 @@
     .contactUsCover{
         padding-bottom: f.pxToRem(100px);
     }
+
+    .contactUsContent {
+        text-align: center;
+        @include mut.rem-margined(80px, 20px, 40px, 0px);
+     
+        
+        > h1 {
+        text-align: left;
+          color: c.$pure-black-color;
+          @include mut.with-font(ft.$closer-text-font, $font-size: 25px, $font-weight: 500);
+        }
+      
+        > h3 {
+        text-align: left;
+          @include mut.with-font(ft.$roboto-font, $font-size: 16px, $font-weight: 300);
+        }
+      
+      
+        .contactUsBtnContainer {
+          @include mut.sized(220px, 55px);
+          @include mut.full-rounded(14px);
+          margin-top: 10px;
+          background-color: c.$accented-red-color;
+          a {
+            @include mut.with-font($font-weight: 400);
+            border-width: 3px;
+            border-color: c.$pure-white-color;
+            color: c.$pure-white-color;
+          }
+          &:hover {
+            filter: drop-shadow(0px 4px 4px rgba(219, 52, 36, 0.1));
+            border-color: c.$accented-red-color;
+          }
+        }
+      }
 }
 
 @media screen and (max-width: 1024px) {
@@ -30,6 +65,9 @@
         .titleBlock{
             margin-bottom: f.pxToRem(80px);    
         }
+        .contactUsContent {
+            display: none;
+        }
     } 
 }
 
@@ -37,6 +75,9 @@
     .contactUsContainer{
         .contactUsCover{
             padding-bottom: f.pxToRem(24px);
+        }
+        .contactUsContent {
+            display: none;
         }
     } 
 }
