--- a/src/features/AdminPage/NewStreetcode/TextBlock/TextForm/TextPreview/TextPreview.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/TextBlock/TextForm/TextPreview/TextPreview.styles.scss
@@ -5,7 +5,6 @@
 .loadingText {
     @include mut.sized(1200px, auto);
     @include mut.with-font($font-weight: 300, $font-size:17px);
+    @include mut.flexed($wrap: wrap);
     text-align: justify;
-    display: flex;
-    flex-wrap: wrap;
 }
