--- a/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtnCircle/PartnersBtnCircle.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtnCircle/PartnersBtnCircle.styles.scss
@@ -5,7 +5,7 @@
 
 .partnersBtnCircleContainer {
   z-index: 4;
-
+  @include mut.positioned-as(relative, $right: 30px);
   @include mut.flex-centered($direction: column);
 
   .partnersBtnCircle {
@@ -33,7 +33,7 @@
 
 @media screen and (max-width: 1024px) {
   .partnersBtnCircleContainer{
-    @include mut.positioned-as(fixed, $top: 35%, $bottom: 28px, $right: 10px);
+    @include mut.positioned-as(relative, $right: 10px);
 
     .partnersBtnCircle{
       @include mut.circular(50px);
