--- a/src/features/AboutUsPage/TeamMemberCard/TeamMemberCard.styles.scss
+++ b/src/features/AboutUsPage/TeamMemberCard/TeamMemberCard.styles.scss
@@ -30,6 +30,7 @@
 
         padding: 0 f.pxToRem(8px);
         text-align: center;
+        word-break: break-all;
         h2 {
             @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 23px);
         }
@@ -41,6 +42,14 @@
             display: flex;
             justify-content: center;
             gap: f.pxToRem(10px);
+            a {
+                min-width: f.pxToRem(25px);
+                min-height: f.pxToRem(25px);
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
         }
     }
   
