--- a/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
+++ b/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
@@ -16,24 +16,25 @@
         background-color: c.$pure-white-color;
         margin-left: 20px;
 
-        @media (min-width: 768px) and (max-width: 1024px){
+        @media (min-width: 768px) and (max-width: 1024px) {
             width: 96vw;
             height: f.pxToRem(462px);
             margin-right: 20px;
             margin-left: 20px;
         }
 
-        @media (min-width: 360px) and (max-width: 767px){
+        @media (min-width: 360px) and (max-width: 767px) {
             width: 94vw;
             height: f.pxToRem(550px);
             margin: 0 f.pxToRem(20px);
         }
 
-        @media (min-width: 614px) and (max-width: 715px){
-            height: f.pxToRem(600px);;
+        @media (min-width: 614px) and (max-width: 715px) {
+            height: f.pxToRem(600px);
+            ;
         }
 
-        @media (min-width: 715px) and (max-width: 768px){
+        @media (min-width: 715px) and (max-width: 768px) {
             height: f.pxToRem(625px);
         }
     }
@@ -46,13 +47,13 @@
         @include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
         background-color: c.$pure-white-color;
 
-        @media (min-width: 768px) and (max-width: 1024px){
+        @media (min-width: 768px) and (max-width: 1024px) {
             height: 161px;
             top: 301px;
             width: 96vw;
         }
 
-        @media (min-width: 360px) and (max-width: 767px){
+        @media (min-width: 360px) and (max-width: 767px) {
             position: relative;
             top: 1px;
             width: 100%;
@@ -65,17 +66,18 @@
         z-index: 1;
         @include mut.rem-padded($top: 5px, $right: 5px, $bottom: 5px, $left: 5px);
 
-        @media (min-width: 768px) and (max-width: 1024px){
+        @media (min-width: 768px) and (max-width: 1024px) {
             margin-top: 0;
             height: 100%;
         }
+
         .newsPageImg {
             position: relative;
             width: 100%;
             height: auto;
             @include mut.full-rounded(30px);
 
-            @media (min-width: 768px) and (max-width: 1024px){
+            @media (min-width: 768px) and (max-width: 1024px) {
                 margin-top: 0;
                 height: 100%;
             }
@@ -89,11 +91,11 @@
         @include mut.flexed(column, start, space-between, nowrap);
         @include mut.rem-padded($top: 25px, $right: 30px, $bottom: 25px, $left: 30px);
 
-        @media (min-width: 768px) and (max-width: 1024px){
+        @media (min-width: 768px) and (max-width: 1024px) {
             @include mut.rem-padded($top: 20px, $right: 20px, $bottom: 20px, $left: 20px);
         }
 
-        @media (min-width: 360px) and (max-width: 767px){
+        @media (min-width: 360px) and (max-width: 767px) {
             @include mut.rem-padded($top: 15px, $right: 15px, $bottom: 15px, $left: 15px);
         }
     }
@@ -103,13 +105,18 @@
         color: #1D1F23;
         line-height: f.pxToRem(48px);
 
-        @media (min-width: 768px) and (max-width: 1024px){
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow: hidden;
+
+        @media (min-width: 768px) and (max-width: 1024px) {
             @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
             font-style: bold;
             line-height: f.pxToRem(26.4px);
         }
 
-        @media (min-width: 360px) and (max-width: 767px){
+        @media (min-width: 360px) and (max-width: 767px) {
             @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
             font-style: bold;
             line-height: f.pxToRem(26.4px);
@@ -121,34 +128,35 @@
         height: 90px;
         @include mut.rem-margined(5px, 0px, 0px, 0px);
         @include mut.rem-padded(0px, 5px, 0px, 0px);
-       
+
         color: c.$lighter-black-color;
         
-    
+
         @include mut.with-font(ft.$roboto-light, $font-weight: 300, $font-size: 15px);
         line-height: 18px;
+
         &::-webkit-scrollbar {
             display: none;
         }
-    
+
         .moreText {
             display: inline-block;
             margin-left: 4px;
             @include mut.with-font(ft.$roboto-font, $font-weight: bolder, $font-size: 15px);
             color: c.$dark-red-color;
             text-decoration: none;
-    
+
             &:hover {
                 text-decoration: underline;
             }
         }
 
-        @media (min-width: 768px) and (max-width: 1024px){
+        @media (min-width: 768px) and (max-width: 1024px) {
             top: 301px;
             width: 93vw;
         }
 
-        @media (min-width: 360px) and (max-width: 767px){
+        @media (min-width: 360px) and (max-width: 767px) {
             width: 100%;
         }
     }
