--- a/src/features/MainPage/StaticBanners/StaticBanner.styles.scss
+++ b/src/features/MainPage/StaticBanners/StaticBanner.styles.scss
@@ -189,7 +189,6 @@
 
                 .redirectButton {
                     @include mut.rem-margined($left: 0px);
-                    @include mut.rem-padded($left: 10px);
                     @include mut.sized($width: 180px, $height: 46px);
                     @include mut.full-rounded(10px);
                     @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 14px);
@@ -210,7 +209,7 @@
                 margin: 0;
 
                 .textContainer {
-                    text-align: center;
+                    text-align: left;
 
                     p.title {
                         @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px);
@@ -247,8 +246,8 @@
                 @include mut.rem-padded($top: 20px, $right: 0px, $bottom: 20px, $left: 0px);
 
                 .textContainer {
-                    @include mut.flexed($direction: column, $align-items: center);
-                    text-align: center;
+                    @include mut.flexed($direction: column, $align-items: left);
+                    text-align: left;
                 }
 
                 .redirectButton {
