--- a/src/app/common/components/modals/Partners/PartnersModal.styles.scss
+++ b/src/app/common/components/modals/Partners/PartnersModal.styles.scss
@@ -24,7 +24,7 @@
         @include mut.positioned-as(absolute, $left: 94%, $top: -25px);
         @include mut.circular(80px, c.$pure-white-color);
 
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);(0px 4px 4px rgba(0, 0, 0, 0.25));
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         .ant-modal-close-x{
           font-size: 24px;
         }
