--- a/src/features/AdditionalPages/ContactUsPage/ContactUs.styles.scss
+++ b/src/features/AdditionalPages/ContactUsPage/ContactUs.styles.scss
@@ -52,7 +52,7 @@
             color: c.$pure-white-color;
           }
           &:hover {
-            box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.1);(0px 4px 4px rgba(219, 52, 36, 0.1));
+            box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.1);
             border-color: c.$accented-red-color;
           }
         }
