--- a/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtnCircle/PartnersBtnCircle.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtnCircle/PartnersBtnCircle.styles.scss
@@ -19,9 +19,8 @@
     border: 3px solid c.$accented-red-color;
 
     &:hover {
-        @include vnd.vendored(filter, '#{c.$hovered-btn-filter-color}');
         color: c.$dark-red-color;
-        box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);(0px 4px 4px rgba(219, 52, 36, 0.18));
+        box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);
       }
   }
 
@@ -37,7 +36,7 @@
 
     .partnersBtnCircle{
       @include mut.circular(50px);
-      box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);(0px 4px 4px rgba(219, 52, 36, 0.18));
+      box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);
 
       svg{
         transform: scale(0.8);
