--- a/src/features/AdminPage/NewStreetcode/MapBlock/StatisticsStreetcodeAdmin/StatisticsAdmin.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/MapBlock/StatisticsStreetcodeAdmin/StatisticsAdmin.styles.scss
@@ -39,7 +39,7 @@
     border: 3px solid #787878;
     border-radius: 23px;
     &:hover {
-      box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.1);(0px 4px 4px rgba(219, 52, 36, 0.1));
+      box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.1);
       border-color: c.$accented-red-color;
     }
 
@@ -69,7 +69,7 @@
       color: c.$accented-red-color;
     }
     &:hover {
-      box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.1);(0px 4px 4px rgba(219, 52, 36, 0.1));
+      box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.1);
       border-color: c.$accented-red-color;
     }
   }
