Added underline for link

--- a/src/features/StreetcodePage/TextBlock/AdditionalTextBlock/AdditionalTextBlock.styles.scss
+++ b/src/features/StreetcodePage/TextBlock/AdditionalTextBlock/AdditionalTextBlock.styles.scss
@@ -20,7 +20,7 @@
         a {
             font-weight: 350;
             color: #891F16;
-
+            text-decoration: underline;
         }
     }
 }
