--- a/src/features/MainPage/TeamSlider/TeamComponent.styles.scss
+++ b/src/features/MainPage/TeamSlider/TeamComponent.styles.scss
@@ -98,4 +98,23 @@ $bgImg: '@assets/images/streetcode-card/background.png';
         padding-right: f.pxToRem(16px);
         padding-bottom: f.pxToRem(20px);
     }
+    
+    .redirectButton {
+        @include mut.sized($width: 95%, $height: 46px);
+        @include mut.full-rounded(10px);
+        @include mut.rem-margined($left: 10px, $right: 10px);
+        text-align: center;
+        cursor: pointer;
+        background-color: c.$accented-red-color;
+        color: c.$pure-white-color;
+        font-family: Roboto;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+
+        &:hover {
+            background-color: c.$dark-red-color;
+        }
+    }
 }
