add some styles

--- a/src/features/AboutUsPage/TeamMemberCard/TeamMemberCard.styles.scss
+++ b/src/features/AboutUsPage/TeamMemberCard/TeamMemberCard.styles.scss
@@ -13,6 +13,7 @@
     border-radius: 50px;
     box-shadow: 0px 7px 17px 2px #5b5b5b40;
     max-width: f.pxToRem(310px);
+    min-width: f.pxToRem(310px);
 
     padding: f.pxToRem(20px);
 
