--- a/src/features/AboutUsPage/TeamMembers/TeamMembersList/TeamMemberList.styles.scss
+++ b/src/features/AboutUsPage/TeamMembers/TeamMembersList/TeamMemberList.styles.scss
@@ -8,6 +8,6 @@
     .teamMemberCardContainer {
         display: flex;
         justify-content: center;
-        width: calc(25% - 20px);
+        //width: calc(25% - 20px);
     }
 }
