--- a/src/features/MainPage/TopCarousel/TopCarousel.styles.scss
+++ b/src/features/MainPage/TopCarousel/TopCarousel.styles.scss
@@ -7,6 +7,12 @@
 .top-carousel {
   @include mut.rem-padded($top: 82px);
 
+.slick-dots{
+  li {
+    width: f.pxToRem(13px) !important;
+  }
+}
+
   .carousel-image {
       width: 100%;
       height: f.pxToRem(737px);
