--- a/src/features/SlickSlider/SlickSlider.styles.scss
+++ b/src/features/SlickSlider/SlickSlider.styles.scss
@@ -39,6 +39,7 @@
     content: '';
     @include mut.sized(12px, 12px);
     background: c.$slider-base-dot-color;
+    opacity: 1;
     transition: .5s;
 }
 
