Centered dots, fixed issues

--- a/src/app/layout/app/slick-slider.overrides.scss
+++ b/src/app/layout/app/slick-slider.overrides.scss
@@ -8,3 +8,8 @@
     padding: 0 1rem !important;
     bottom: unset !important;
 }
+
+.sliderClass .slick-dots li,
+.sliderClass .slick-dots li button {
+    padding: 0 !important;
+}
