--- a/src/features/MainPage/NewsSlider/NewsSlider.styles.scss
+++ b/src/features/MainPage/NewsSlider/NewsSlider.styles.scss
@@ -30,8 +30,8 @@
         width: unset !important;
         
         @media screen and (max-width: 767px) {
-                width: 100% !important;
-            }
+            width: 100% !important;
+        }
     }
 
     .slick-initialized .slick-slide {
@@ -47,6 +47,11 @@
     .slick-initialized .slick-slide {
         @include mut.flexed($justify-content: center, $gap: 0px);
         @include mut.rem-margined($top: 0px, $right: 0px, $bottom: 10px, $left: 0px);
+    }
+
+    .newsSliderContentBlock,
+    .blockCenter {
+        @include mut.flex-centered();
     }
 }
 }
